--- a/templates/consulta/index.html.twig
+++ b/templates/consulta/index.html.twig
@@ -66,7 +66,7 @@
             contenido.addColumn('string', 'Contenido');
             contenido.addColumn('number', 'Conteo');
             contenido.addRows([
-                ['Yes', {{ contenido.yes }}],
+                ['Si', {{ contenido.yes }}],
                 ['No', {{ contenido.no }}]
             ]);
 
